@startuml

!theme reddress-darkblue
skinparam backgroundColor #111111

abstract class Node
abstract class Connection
abstract class BehaviourGraph
Interface IStatusHandler
Interface IPerceptionHandler
Interface IActionHandler


BehaviourGraph <|-- FSM
Node <|-- State
IActionHandler <|.. State
IStatusHandler <|.. State
State --* FSM
State *--* Transition
FSM <|-- StackFSM
Connection <|-- Transition
Transition <|-- MealyTransition
IPerceptionHandler <|.. Transition
@enduml
